alignment fixed

--- a/assets/css/style.css
+++ b/assets/css/style.css
@@ -462,6 +462,7 @@ header .grid-layout nav .nav-list li a:hover {
   #s-about .grid-layout #about-photo {
     width: 50%;
     max-width: 200px;
+    align-content: center;
   }
 }
 
